--- a/Assignments/assignment_1/assignment1_template.qmd
+++ b/Assignments/assignment_1/assignment1_template.qmd
@@ -55,7 +55,7 @@ If there is a special character like comma, you need use double quote mark so th
 library(tidyverse)
 library(dplyr)
 library(knitr)
-
+library(tidycensus)
 # Set your Census API key
 census_api_key("fef2af5588030f3fd4b474bd111e0d63a7ec2837")
 
@@ -163,8 +163,18 @@ reliability_summary
 
 ```{r high-uncertainty}
 # Create table of top 5 counties by MOE percentage
-
+top5_uncertain <- county_data_clean %>%
+  arrange(desc(MOE)) %>%
+  slice(1:5) %>%
+  select(
+    County = NAME,
+    Median_Income = median_incomeE,
+    Margin_of_Error = median_incomeM,
+    MOE_Percentage = MOE,
+    Reliability = reliability
+  )
 # Format as table with kable() - include appropriate column names and caption
+kable(top5_uncertain, caption = "Top 5 Counties with Highest MOE Percentage (Median Income)")
 ```
 
 **Data Quality Commentary:**
