--- a/Assignments/assignment_2/Jinyang_Xu_Assignment2.qmd
+++ b/Assignments/assignment_2/Jinyang_Xu_Assignment2.qmd
@@ -997,6 +997,8 @@ The maps show that high-crime and low-bike-coverage school zones largely overlap
 ## Finally - A few comments about your incorporation of feedback!
 Take a few moments to clean up your markdown document and then write a line or two or three about how you may have incorporated feedback that you recieved after your first assignment. 
 
+I deleted some descriptive sentences and symbols so now the Assignment1 looks cleaner.
+
 ---
 
 ## Submission Requirements
